--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-lliurex-artwork (1.0-alpha1) UNRELEASED; urgency=medium
+lliurex-artwork (1.0-alpha1) bionic; urgency=high
 
   * Initial release.
 
