--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork (1.0-alpha4) bionic; urgency=medium
+
+  * Fix ppa build
+
+ -- Juanma Navarro Mañez <juanma1980@gmail.com>  Wed, 24 Apr 2019 12:58:44 +0200
+
 lliurex-artwork (1.0-alpha3) bionic; urgency=medium
 
   * Add foro lliurex as searchprovider
