--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+lliurex-artwork (1.2.0.0) bionic; urgency=low
+
+  * Master tag: f2fed93b982dd08e25c3430ff245b2320f8bce7a
+  * Moved window theme to breeze, for better resource usage
+  * Created custom sddm theme
+
+ -- Enrique Medina Gremaldos <quiqueiii@gmail.com>  Tue, 21 May 2019 13:15:44 +0200
+
 lliurex-artwork (1.1-alpha2) bionic; urgency=medium
   * Fix ppa build
 
