--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+lliurex-artwork (1.3.0.0) bionic; urgency=medium
+
+  * Master tag: 32aa914ff530be8c564f108103d4e3298d2a22ee
+  * Added a soft-link-based layout selector
+  * Modified dialogs background
+
+ -- Enrique Medina Gremaldos <quiqueiii@gmail.com>  Fri, 24 May 2019 12:25:42 +0200
+
 lliurex-artwork (1.2.0.0) bionic; urgency=low
 
   * Master tag: f2fed93b982dd08e25c3430ff245b2320f8bce7a
