--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork (1.3.0.1) bionic; urgency=medium
+
+  * kwin theme is gone
+
+ -- Enrique Medina Gremaldos <quiqueiii@gmail.com>  Fri, 24 May 2019 14:51:53 +0200
+
 lliurex-artwork (1.3.0.0) bionic; urgency=medium
 
   * Master tag: 32aa914ff530be8c564f108103d4e3298d2a22ee
