--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork (1.3.0.2) bionic; urgency=medium
+
+  * binary package lliurex-desktop-defaults brings dependencies with it
+
+ -- Enrique Medina Gremaldos <quiqueiii@gmail.com>  Mon, 27 May 2019 13:46:20 +0200
+
 lliurex-artwork (1.3.0.1) bionic; urgency=medium
 
   * kwin theme is gone
