--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork (1.4.0.0) bionic; urgency=medium
+
+  * Master tag: 93b100abec332e9dab86ff6ba8220876b6bbcfa1
+
+ -- Enrique Medina Gremaldos <quiqueiii@gmail.com>  Tue, 28 May 2019 14:51:45 +0200
+
 lliurex-artwork (1.3.1.0) bionic; urgency=medium
 
   * Master tag: aa68ce60041203d68e006c84ee351f58bbfb0030
