--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+lliurex-artwork (1.5.3.0) bionic; urgency=high
+
+  * Small wallpaper changes
+  * Query back to apache
+
+ -- Hector Garcia Huerta <hectorgh@gmail.com>  Tue, 04 Jun 2019 09:33:02 +0200
+
 lliurex-artwork (1.5.2.0) bionic; urgency=medium
 
   * Master tag: a3c8c098cab58e34036f9d0d7a4daa2ac74c4c10
