--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork (1.5.5.1) bionic; urgency=medium
+
+  * Fixed typo in server sddm theme
+
+ -- Enrique Medina Gremaldos <quiqueiii@gmail.com>  Thu, 06 Jun 2019 09:13:07 +0200
+
 lliurex-artwork (1.5.5.0) bionic; urgency=medium
 
   * Master tag: 7a82a22193a4b42c94e85f9be446d2e9b691a4db
