--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork (1.5.9.1) bionic; urgency=medium
+
+  * Added a dependency with lliurex plymouth theme to default desktop package
+
+ -- Enrique Medina Gremaldos <quiqueiii@gmail.com>  Thu, 27 Jun 2019 13:30:38 +0200
+
 lliurex-artwork (1.5.9.0) bionic; urgency=medium
 
   * Master tag: ddd753b024a28682cc8c6ec328fec2c73b138e68
