--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+lliurex-artwork (1.9.1.0) bionic; urgency=medium
+
+  * Master tag: aa7b40a23ccdfae8a7cba2b414772ab6020f0628
+  * Added musica and infantil default look and feel
+
+ -- Enrique Medina Gremaldos <quiqueiii@gmail.com>  Wed, 24 Jul 2019 15:02:52 +0200
+
 lliurex-artwork (1.9.0.0) bionic; urgency=medium
 
   * Master tag: 0fec4ee8b0cadf56553f3f01ab57f93770a07966
