--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+lliurex-artwork (1.9.3.0) bionic; urgency=medium
+
+  * Master tag: df718555078ca726c262ebf3a945afc848037a31
+  * Fixed neutral background so gva and eu logos can be readed
+
+ -- Enrique Medina Gremaldos <quiqueiii@gmail.com>  Mon, 09 Sep 2019 13:00:01 +0200
+
 lliurex-artwork (1.9.2.1) bionic; urgency=medium
 
   * Changed background colors to slightly darker color gradients
