--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+lliurex-artwork (1.11.0.0) bionic; urgency=medium
+
+  * Master tag: 5b01f6d4433a6b39809590494cd1da6e24dc8e12
+  * Solved some consistency issues when a new LnF was selected
+  * Added splash screen to classic layout too
+
+ -- Enrique Medina Gremaldos <quiqueiii@gmail.com>  Fri, 15 Nov 2019 12:39:10 +0100
+
 lliurex-artwork (1.10.0.0) bionic; urgency=medium
 
   * Master tag: 204ed899c8f78988a1eed21b71de9e80b074359e
