--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+lliurex-artwork (1.12.1.0) bionic; urgency=medium
+
+  * Master tag: f0ca4071039fec15006f84a34c713efb3a91ea60
+  * Fix: live session wdefault wallpaper not working
+
+ -- Enrique Medina Gremaldos <quiqueiii@gmail.com>  Thu, 23 Jan 2020 09:54:48 +0100
+
 lliurex-artwork (1.12.0.0) bionic; urgency=medium
 
   * Master tag: bf6466396c313a2b987efd53e4661fff9fa2c449
