--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+lliurex-artwork (2.0.0.0) bionic; urgency=medium
+
+  * Master tag: 30837d6e170cbff4303fd09949a2ebffbdf0f717
+  * New 19+1 wallpapers
+
+ -- Enrique Medina Gremaldos <quiqueiii@gmail.com>  Thu, 09 Jul 2020 10:39:53 +0200
+
 lliurex-artwork (1.13.1.0) bionic; urgency=medium
 
   * Master tag: cd08df420606435deddd0e8df272d8489315cb90
