--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+lliurex-artwork (2.0.1.0) bionic; urgency=medium
+
+  * Master tag: a79f3b45316ba1dcc355d2b5a14b2feee28bd432
+  * Fixed Makefile
+
+ -- Enrique Medina Gremaldos <quiqueiii@gmail.com>  Thu, 09 Jul 2020 15:51:20 +0200
+
 lliurex-artwork (2.0.0.0) bionic; urgency=medium
 
   * Master tag: 30837d6e170cbff4303fd09949a2ebffbdf0f717
