--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+lliurex-artwork (2.1.0.0) bionic; urgency=medium
+
+  * Master tag: 4e9f453594907fcc45fb41a22b369f1a594b9475
+  * Added lliurex-breeze-gtk-theme package to fix spinbuttons & togglebuttons
+
+ -- Hector Garcia Huerta <hectorgh@gmail.com>  Tue, 21 Jul 2020 09:18:01 +0200
+
 lliurex-artwork (2.0.1.1) bionic; urgency=medium
 
   * Updated sddm dependency name
