--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork (21.0.1.0) focal; urgency=medium
+
+  * wip upgrade
+
+ -- Enrique Medina Gremaldos <quiqueiii@gmail.com>  Wed, 12 May 2021 12:53:18 +0200
+
 lliurex-artwork (21.0.0.0) focal; urgency=medium
 
   * Testing new default layout (wip)
