--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork (21.0.2.0) focal; urgency=medium
+
+  * updated preview
+
+ -- Enrique Medina Gremaldos <quiqueiii@gmail.com>  Wed, 12 May 2021 14:07:35 +0200
+
 lliurex-artwork (21.0.1.0) focal; urgency=medium
 
   * wip upgrade
