--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork (21.0.3.0) focal; urgency=medium
+
+  * just some progress, alpha quality
+
+ -- Enrique Medina Gremaldos <quiqueiii@gmail.com>  Tue, 18 May 2021 09:59:14 +0200
+
 lliurex-artwork (21.0.2.0) focal; urgency=medium
 
   * updated preview
