--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork (21.1.5.0) focal; urgency=medium
+
+  * Overhauled whole look and feel mechanism
+
+ -- Enrique Medina Gremaldos <quiqueiii@gmail.com>  Tue, 01 Jun 2021 11:29:52 +0200
+
 lliurex-artwork (21.0.5.0) focal; urgency=medium
 
   * Added 4:3 backgrounds
