--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork (21.2.2.1) bionic; urgency=medium
+
+  * Add statistics,inventory icons for appselector (calamares)
+
+ -- Juanma1980 <juanma1980@gmail.com>  Tue, 13 Jul 2021 21:16:53 +0200
+
 lliurex-artwork (21.2.2.0) focal; urgency=medium
 
   * Splash fixes
