--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-lliurex-artwork (21.2.2.1) bionic; urgency=medium
+lliurex-artwork (21.2.2.1) focal; urgency=medium
 
   * Add statistics,inventory icons for appselector (calamares)
 
