--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork (21.3.2.1) focal; urgency=medium
+
+  * fixing packaging
+
+ -- Enrique Medina Gremaldos <quiqueiii@gmail.com>  Thu, 22 Jul 2021 13:26:35 +0200
+
 lliurex-artwork (21.3.2.0) focal; urgency=medium
 
   * Fixed translation build and install script
