--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork (21.3.4.0) focal; urgency=medium
+
+  * really?
+
+ -- Enrique Medina Gremaldos <quiqueiii@gmail.com>  Thu, 22 Jul 2021 13:55:45 +0200
+
 lliurex-artwork (21.3.3.0) focal; urgency=medium
 
   * yet antother try to get package working
