--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork (21.4.0.0) focal; urgency=medium
+
+  * Trying to fix window colors and classic layout splash
+
+ -- Enrique Medina Gremaldos <quiqueiii@gmail.com>  Tue, 27 Jul 2021 14:02:43 +0200
+
 lliurex-artwork (21.3.5.1) focal; urgency=medium
 
   * Fixed lliurex-desktop-defaults plasmoids install path
