--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork (22.0.0.0~beta0) focal; urgency=medium
+
+  * Added a custom lock and logout screen
+
+ -- Enrique Medina Gremaldos <quiqueiii@gmail.com>  Thu, 17 Feb 2022 17:39:03 +0100
+
 lliurex-artwork (21.4.1.0) focal; urgency=medium
 
   * Displaying an icon when avatar is not available
