--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork (22.0.0.0~beta2) lliurex-22; urgency=medium
+
+  * Some progress on logout screen
+
+ -- Enrique Medina Gremaldos <quiqueiii@gmail.com>  Thu, 10 Mar 2022 12:18:43 +0100
+
 lliurex-artwork (22.0.0.0~beta1) focal; urgency=medium
 
   * Merged with master
