--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork (22.0.0.0~beta5) lliurex22; urgency=medium
+
+  * Added ES translations
+
+ -- Enrique Medina Gremaldos <quiqueiii@gmail.com>  Mon, 04 Apr 2022 13:27:22 +0200
+
 lliurex-artwork (22.0.0.0~beta4) lliurex22; urgency=medium
 
   * Using a new kick off menu
