--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork (22.0.0.0~beta7) lliurex22; urgency=medium
+
+  * WIP
+
+ -- Enrique Medina Gremaldos <quiqueiii@gmail.com>  Wed, 08 Jun 2022 12:52:29 +0200
+
 lliurex-artwork (22.0.0.0~beta6) lliurex22; urgency=medium
 
   * Better virtual keyboard sizing
