--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork (22.0.0.0~beta8) lliurex22; urgency=medium
+
+  * Disabled automount from user session
+ 
+ -- Enrique Medina Gremaldos <quiqueiii@gmail.com>  Fri, 10 Jun 2022 12:04:49 +0200
+
 lliurex-artwork (22.0.0.0~beta7) lliurex22; urgency=medium
 
   * WIP
