--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork (22.2.0.0) lliurex22; urgency=medium
+
+  * Upgraded desktop theme to match 5.25
+
+ -- Enrique Medina Gremaldos <quiqueiii@gmail.com>  Tue, 28 Jun 2022 10:32:57 +0200
+
 lliurex-artwork (22.1.1.0) lliurex22; urgency=medium
 
   * Fixed makefile
