--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork (22.4.0.0) lliurex22; urgency=medium
+
+  * Panel width is now smart. Size computed using current screen dimensions.
+
+ -- Enrique Medina Gremaldos <quiqueiii@gmail.com>  Mon, 11 Jul 2022 10:36:24 +0200
+
 lliurex-artwork (22.3.1.0) lliurex22; urgency=medium
 
   * Yet another fix
