--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork (22.6.0.0) lliurex22; urgency=medium
+
+  * Using a default onboard settings
+
+ -- Enrique Medina Gremaldos <quiqueiii@gmail.com>  Thu, 28 Jul 2022 09:56:56 +0200
+
 lliurex-artwork (22.5.0.0) lliurex22; urgency=medium
 
   * Panel may be opaque again
