--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork (22.6.1.0) lliurex22; urgency=medium
+
+  * Fixed broken dconf
+
+ -- Enrique Medina Gremaldos <quiqueiii@gmail.com>  Fri, 29 Jul 2022 10:08:04 +0200
+
 lliurex-artwork (22.6.0.0) lliurex22; urgency=medium
 
   * Using a default onboard settings
