--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork (22.7.1.0) lliurex22; urgency=medium
+
+  * Some changes on onboard settings
+
+ -- Enrique Medina Gremaldos <quiqueiii@gmail.com>  Mon, 14 Nov 2022 12:36:00 +0100
+
 lliurex-artwork (22.7.0.0) lliurex22; urgency=medium
 
   * Logout osd allows now to switch action
