--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+lliurex-artwork (22.8.0.0) lliurex22; urgency=medium
+
+  * Fixed lockscreen bug, happening on multiple monitor set ups
+  * Fixed server wallpaper not showing
+  * Added zero center launcher to default layout taskbar
+
+ -- Enrique Medina Gremaldos <quiqueiii@gmail.com>  Fri, 18 Nov 2022 10:54:05 +0100
+
 lliurex-artwork (22.7.1.0) lliurex22; urgency=medium
 
   * Some changes on onboard settings
