--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork (22.8.1.0) lliurex22; urgency=medium
+
+  * Added a missing gsettings key
+  
+ -- Enrique Medina Gremaldos <quiqueiii@gmail.com>  Mon, 28 Nov 2022 11:06:59 +0100
+
 lliurex-artwork (22.8.0.0) lliurex22; urgency=medium
 
   * Fixed lockscreen bug, happening on multiple monitor set ups
