--- a/locale/es.po
+++ b/locale/es.po
@@ -1,21 +1,17 @@
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-#
-# quique <quiqueiii@gmail.com>, 2022.
+# #-#-#-#-#  es.po  #-#-#-#-#
+#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: \n"
+"Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-10-06 10:02+0200\n"
-"PO-Revision-Date: 2022-10-06 11:01+0200\n"
-"Last-Translator: quique <quiqueiii@gmail.com>\n"
-"Language: es\n"
+"POT-Creation-Date: 2022-12-07 13:05+0100\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language-Team: Spanish <kde-i18n-doc@kde.org>\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Lokalize 22.04.2\n"
 
 #: look-and-feel/net.lliurex.default/contents/lockscreen/LockScreen.qml:91
 msgid "Login failed"
@@ -106,3 +102,7 @@ msgstr "Cerrar sesión"
 #: look-and-feel/net.lliurex.default/contents/splash/Splash.qml:80
 msgid "Loading desktop..."
 msgstr "Cargando escritorio..."
+
+#: look-and-feel/net.lliurex.default/contents/lockscreen/LockScreen.qml:333
+msgid "New session"
+msgstr "Nueva sesión"
