--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork (22.8.2.0) lliurex22; urgency=medium
+
+  * Some lockscreen fixes and enhacenments about session handling
+
+ -- Enrique Medina Gremaldos <quiqueiii@gmail.com>  Wed, 07 Dec 2022 13:33:09 +0100
+
 lliurex-artwork (22.8.1.0) lliurex22; urgency=medium
 
   * Added a missing gsettings key
