--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork (22.8.3.0) focal; urgency=medium
+
+  * Disabled onboard move strategy
+
+ -- Enrique Medina Gremaldos <quiqueiii@gmail.com>  Thu, 12 Jan 2023 11:37:22 +0100
+
 lliurex-artwork (22.8.2.0) lliurex22; urgency=medium
 
   * Some lockscreen fixes and enhacenments about session handling
