--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork (23.0.0.0) focal; urgency=medium
+
+  * Early 21.23 release. Expect some dragons
+
+ -- Enrique Medina Gremaldos <quiqueiii@gmail.com>  Thu, 15 Jun 2023 16:54:48 +0200
+
 lliurex-artwork (22.9.0.0) focal; urgency=medium
 
   * Fixed lock-screen focus behaviour (related to last qml-module-lliurex-ui update)
