add valencian translations

--- a/locale/ca@valencia.po
+++ b/locale/ca@valencia.po
@@ -1,22 +1,108 @@
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-#
-# quique <quiqueiii@gmail.com>, 2021.
+# #-#-#-#-#  es.po  #-#-#-#-#
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-07-16 12:02+0200\n"
-"PO-Revision-Date: 2021-07-22 12:34+0200\n"
-"Last-Translator: quique <quiqueiii@gmail.com>\n"
-"Language: es\n"
+"POT-Creation-Date: 2022-12-07 13:05+0100\n"
+"PO-Revision-Date: 2023-06-19 12:10+0200\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: new\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language-Team: Spanish <kde-i18n-doc@kde.org>\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Lokalize 21.04.3\n"
+"X-Generator: Poedit 3.3.1\n"
 
-#: Splash.qml:89
+#: look-and-feel/net.lliurex.default/contents/lockscreen/LockScreen.qml:91
+msgid "Login failed"
+msgstr "L'inici de sessió ha fallat"
+
+#: look-and-feel/net.lliurex.default/contents/lockscreen/LockScreen.qml:105
+msgid "Error:"
+msgstr "S'ha produït un error:"
+
+#: look-and-feel/net.lliurex.default/contents/lockscreen/LockScreen.qml:183
+msgid "Session locked"
+msgstr "Sessió bloquejada"
+
+#: look-and-feel/net.lliurex.default/contents/lockscreen/LockScreen.qml:229
+msgid "Sessions"
+msgstr "Sessions"
+
+#: look-and-feel/net.lliurex.default/contents/lockscreen/LockScreen.qml:304
+msgid "Switch"
+msgstr "Canvia"
+
+#: look-and-feel/net.lliurex.default/contents/lockscreen/LockScreen.qml:320
+#: look-and-feel/net.lliurex.default/contents/logout/Logout.qml:193
+#: look-and-feel/net.lliurex.default/contents/logout/Logout.qml:337
+msgid "Cancel"
+msgstr "Cancel·la"
+
+#: look-and-feel/net.lliurex.default/contents/lockscreen/LockScreen.qml:333
+#: look-and-feel/net.lliurex.default/contents/lockscreen/LockScreen.qml:420
+msgid "Unlock"
+msgstr "Desbloqueja"
+
+#: look-and-feel/net.lliurex.default/contents/lockscreen/LockScreen.qml:395
+msgid "Caps lock"
+msgstr "Majúscules"
+
+#: look-and-feel/net.lliurex.default/contents/lockscreen/LockScreen.qml:404
+msgid "Password"
+msgstr "Contrasenya"
+
+#: look-and-feel/net.lliurex.default/contents/lockscreen/LockScreen.qml:446
+msgid "Change user"
+msgstr "Canvi d'usuari"
+
+#: look-and-feel/net.lliurex.default/contents/lockscreen/config.qml:35
+msgid "Clock"
+msgstr "Rellotge"
+
+#: look-and-feel/net.lliurex.default/contents/lockscreen/config.qml:36
+msgid "Display a date & time clock"
+msgstr "Mostra el rellotge amb data i hora"
+
+#: look-and-feel/net.lliurex.default/contents/logout/Logout.qml:61
+msgid "There are running sessions"
+msgstr "Hi ha sessions actives"
+
+#: look-and-feel/net.lliurex.default/contents/logout/Logout.qml:101
+msgid "System is about to power off"
+msgstr "El sistema s'apagarà"
+
+#: look-and-feel/net.lliurex.default/contents/logout/Logout.qml:105
+msgid "System is about to reboot"
+msgstr "El sistema es reiniciarà"
+
+#: look-and-feel/net.lliurex.default/contents/logout/Logout.qml:109
+msgid "Session is about to log out"
+msgstr "La sessió es tancarà"
+
+#: look-and-feel/net.lliurex.default/contents/logout/Logout.qml:115
+msgid " seconds"
+msgstr " segons"
+
+#: look-and-feel/net.lliurex.default/contents/logout/Logout.qml:158
+#: look-and-feel/net.lliurex.default/contents/logout/Logout.qml:302
+msgid "Power off"
+msgstr "Apaga"
+
+#: look-and-feel/net.lliurex.default/contents/logout/Logout.qml:169
+#: look-and-feel/net.lliurex.default/contents/logout/Logout.qml:313
+msgid "Reboot"
+msgstr "Reinicia"
+
+#: look-and-feel/net.lliurex.default/contents/logout/Logout.qml:180
+#: look-and-feel/net.lliurex.default/contents/logout/Logout.qml:324
+msgid "Log out"
+msgstr "Tanca la sessió"
+
+#: look-and-feel/net.lliurex.default/contents/splash/Splash.qml:80
 msgid "Loading desktop..."
-msgstr "Carregant l'escriptori..."
+msgstr "S'està carregant l'escriptori..."
+
+#: look-and-feel/net.lliurex.default/contents/lockscreen/LockScreen.qml:333
+msgid "New session"
+msgstr "Nova sessió"
