--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork (23.0.1.0) focal; urgency=medium
+
+  * Add Valencian translations
+
+ -- Raul Rodrigo Segura <raurodse@gmail.com>  Wed, 05 Jul 2023 10:59:46 +0200
+
 lliurex-artwork (23.0.0.0) focal; urgency=medium
 
   * Early 21.23 release. Expect some dragons
