--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork (23.4.0.0) jammy; urgency=medium
+
+  * Remove welcome launcher
+
+ -- Raul Rodrigo Segura <raurodse@gmail.com>  Wed, 20 Sep 2023 13:48:55 +0200
+
 lliurex-artwork (23.3.0.0) jammy; urgency=medium
 
   * Removed transparecies from panel
