--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork (23.4.1.0) jammy; urgency=medium
+
+  * No longer using soft links on look and feel themes.
+
+ -- Enrique Medina Gremaldos <quiqueiii@gmail.com>  Fri, 22 Sep 2023 13:45:18 +0200
+
 lliurex-artwork (23.4.0.0) jammy; urgency=medium
 
   * Remove welcome launcher
