--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork (23.5-beta0) jammy; urgency=medium
+
+  * Testing a new custom wallpaper plugin. Pre-release version.
+
+ -- Enrique Medina Gremaldos <quiqueiii@gmail.com>  Thu, 01 Feb 2024 13:16:24 +0100
+
 lliurex-artwork (23.4.2.0) jammy; urgency=medium
 
   * Fixed bug on lockscreen window, preventing virtual keyboard to work properly
