--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork (23.6) jammy; urgency=medium
+
+  * Released 23 wallpaper. Some fixes are need, however.
+
+ -- Enrique Medina Gremaldos <quiqueiii@gmail.com>  Tue, 13 Feb 2024 11:20:13 +0100
+
 lliurex-artwork (23.5-beta1) jammy; urgency=medium
 
   * Added power profile
