--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+lliurex-artwork (23.6.1.0) jammy; urgency=medium
+
+  * Fixed missing json on wallpaper plugin
+  * Fixed children group detection logic
+
+ -- Enrique Medina Gremaldos <quique@necos.es>  Thu, 29 Feb 2024 12:22:50 +0100
+
 lliurex-artwork (23.6) jammy; urgency=medium
 
   * Released 23 wallpaper. Some fixes are need, however.
