--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork (23.0.2.0) noble; urgency=medium
+
+  * InputPanel bug workaround
+
+ -- Enrique Medina Gremaldos <quique@necos.es>  Mon, 15 Jul 2024 12:17:26 +0200
+
 lliurex-artwork (23.0.1.0) focal; urgency=medium
 
   * Add Valencian translations
