--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork (23.7.1.2) noble; urgency=medium
+
+  * Noble testing release
+
+ -- Enrique Medina Gremaldos <quique@necos.es>  Wed, 31 Jul 2024 10:24:59 +0200
+
 lliurex-artwork (23.7.1.0) jammy; urgency=medium
 
   * Added a default touchpad tap-to-click settings for some known laptops
