--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork (23.7.1.6) noble; urgency=medium
+
+  * Fixing build on noble
+
+ -- Enrique Medina Gremaldos <quique@necos.es>  Mon, 02 Sep 2024 09:01:11 +0200
+
 lliurex-artwork (23.7.1.5) noble; urgency=medium
 
   * Noble testing release
