--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork (25.0.0.0) noble; urgency=medium
+
+  * Updated plugin metadata to fit Plasma6
+
+ -- Enrique Medina Gremaldos <quique@necos.es>  Tue, 24 Sep 2024 13:46:32 +0200
+
 lliurex-artwork (23.7.1.8) noble; urgency=medium
 
   * Fixing build on noble
