--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork (23.0.4.0) focal; urgency=medium
+
+  * Using absolute wallpaper path
+
+ -- Enrique Medina Gremaldos <quique@necos.es>  Mon, 21 Oct 2024 14:24:47 +0200
+
 lliurex-artwork (23.0.3.0) focal; urgency=medium
 
   * Updated wallpaper info format
