--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork (25.0.0.0+build1) UNRELEASED; urgency=medium
+
+  * Dummy build to match newer qt6 dependencies
+
+ -- Enrique Medina Gremaldos <quique@necos.es>  Wed, 06 Nov 2024 10:06:49 +0100
+
 lliurex-artwork (25.0.0.0) noble; urgency=medium
 
   * Updated plugin metadata to fit Plasma6
