--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-artwork (25.0.0.0+build4) noble; urgency=medium
+
+  * Some minor fixes to get this working at least
+
+ -- Enrique Medina Gremaldos <quique@necos.es>  Tue, 12 Nov 2024 14:00:46 +0100
+
 lliurex-artwork (25.0.0.0+build3) noble; urgency=medium
 
   * Fix dependency
